Addressed all the referee's comments

--- a/turan.bib
+++ b/turan.bib
@@ -110,3 +110,24 @@
   publisher = {NorthHolland},
   address = {Amsterdam-New York}
 }
+
+@Book{cormen.leiserson.ea:introduction,
+author = {Thomas H. Cormen
+           and Charles E. Leiserson
+           and Ronald L. Rivest
+           and Clifford Stein},
+title = {Introduction to Algorithms}, 
+edition = {Second},
+publisher = {MIT Press and McGraw–Hill},
+year = {2001}
+}
+
+@article{behrend:on,
+author = {F. Behrend},
+title = {On sets of integers which contain no three terms in arithmetic progression},
+journal = {Proceedings of the National Academy of Sciences USA}, 
+volume = {32},
+year = {1946},
+pages = {331--332}
+}
+
