Switched to plainurl bibliography

--- a/turan.bib
+++ b/turan.bib
@@ -96,7 +96,7 @@
 @misc{oeis:a070214,
   author = {N. J. A. Sloane},
   title = {The Online Encyclopedia of Integer Sequences},
-  url = {http://oeis.org/},
+  url = {http://oeis.org/A070214},
   note = {Sequence number A070214}
 }
 
