--- a/turan.tex
+++ b/turan.tex
@@ -1328,7 +1328,7 @@ the other participants of this workshop for providing a stimulating working
 environment.
 
 
-\bibliographystyle{plain}
+\bibliographystyle{plainurl}
 \bibliography{turan}
 
 \end{document}
