--- a/turan.tex
+++ b/turan.tex
@@ -277,7 +277,7 @@ problem and its rich history in \secref{tripods}.
     $n^*=n:n\log n$ \quad $\mathrm{tripods}=n^{1.546}:n^2/e^{\Omega(\log^* n)}$
   }
   \caption{New and previous bounds for $\ex(n,X)$, up to a factor of $\log n$.
-  New near-optimal results are in dark(er) green. TX denotes Theorem~X in this paper and [X] denotes reference X in this paper. For example T16:[1] denotes a lower bound that appears in Theorem~16 and an upper bound due to Bra\ss\ \cite{brass:turan}.}
+  New near-optimal results are in dark(er) green. TX denotes Theorem~X in this paper and [X] denotes reference X in this paper. For example T16:\cite{brass:turan} denotes a lower bound that appears in Theorem~16 and an upper bound due to Bra\ss\ \cite{brass:turan}.}
   % For the new bounds listed as $n$, the lower bound is $\Omega(n)$ and the upper bound is $O(n\log n)$.  For the bounds listed as ``tripods'', the lower bound is $\Omega(n^{1.546})$ and the upper bound is $n^2/e^{\Omega(\log^*n)}$.}
   \tablabel{bigtable}
 \end{table}
@@ -933,7 +933,7 @@ $y_0<y_1$ and $x_0<x_1$.
   most two such points and the total contribution of these points to
   $\sum_{i=1}^n |Q_i|$ is at most $2n$.
 
-  In total, we obtain an upper bound of $7n$ on $\sum_{i=1}^n |Q_i|$.
+  In total, we obtain an upper bound of $4n + |S|+2n\le 8n$ on $\sum_{i=1}^n |Q_i|$.
 \end{proof}
 
 
